--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,13 +33,13 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.4",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
