--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "styled-components": "^5.3.8"
