--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
